fixes #22 Fix the issue that scheduled tasks sent only on the timeunit with start timestamp (#23)
